   - Regress against latest libxml2 blead.
     -- there are some changes in limits that impact 35huge_mode.t
        and 60err_prev_chain.t
     -- xmlElem struct size has changed! Affected tail members of the
        struct have been made private and t/00native.t has been fixed.
   - Build.pm6 -I <include-path> now works on non-Windows platforms

0.9.8  2023-02-08T09:09:26+13:00
   - Fix more xmlMalloc() not paired with xmlFree()
   - Block parse(:$io) from running on Windows. I don't think it's
     ever worked and may crash.
   - Add CStruct size tests to t/00native.t

0.9.7  2023-02-07T07:58:24+13:00
   - Implement DLL name demangling to fix installation on Windows #66

0.9.6  2023-02-04T21:04:27+13:00
   - Update prebuilt xml6.dll on Windows
   - Fix mixed use of alloc() & xmlMalloc(). Ensure objects created via
     xmlMalloc() are freed via xmlFree().

0.9.5  2023-02-03T07:52:04+13:00
   - Fix de-ASTfication of the default (xmlns) namespace PR #92 vrurg++
   - Fix xmlBuffer32 and xmlBuf to work with binary data
   - Fix return values on xml6_sax_locator_set_{getPublicId|getSystemId}
   - Refactor of LibXML::_Options get-option() and set-option() methods

0.9.4  2023-01-19T06:26:19+13:00
   - Deprecate HTML serialization via htmlDoc.dump() method in
     favour of xml6_node_to_buf(), which uses xmlSaveTree().
   - Added node method isHTMLish().  This is used to default
     the :$html option in Str() and Blob() methods.

0.9.3  2023-01-15T06:20:09+13:00
   - Add :%attribs argument to startElementNs() SAX handler

0.9.2  2022-12-02T10:49:43+13:00
   - Fix valgrind errors in xmlEncodingStr subset.
   - Remove references to DocBook (DOCB). Not used in the Raku bindings,
     deprecated in libxml2, and causing compilation warnings.

0.9.1  2022-11-10T13:48:54+13:00
   - Fix LibXML::XPath::Context get-value() for LibXSLT

0.9.0  2022-08-18T06:01:31+12:00
   - Simplify subclassing in complex cases