@@ -16,7 +16,7 @@ my $version = $p.version;
 ok $version, 'LibXML.version is trueish';
 sub yn($_) { .so ?? 'yes' !! 'no' }
 diag "Running libxml2 version: $version (module {LibXML.^ver}, Raku {$*RAKU.compiler.version})";
-diag "libxml2 configuration: threads={yn config.have-threads} reader={yn config.have-reader} schemas={yn config.have-schemas} compression={yn config.have-compression}"; #
+diag "libxml2 configuration: threads={yn config.have-threads} reader={yn config.have-reader} schemas={yn config.have-schemas} compression={yn config.have-compression} iconv={yn config.have-iconv}"; #
 given LibXML.config-version {
     diag "***NOTE was configured against libxml2 version $_ ***"
         unless $_ == $version
