@@ -13,6 +13,9 @@ use LibXML;
 use LibXML::Document;
 use LibXML::Element;
 use LibXML::Enums;
+use LibXML::Config;
+
+my \config =  LibXML::Config;
 
 sub is-empty-str(Str $s)
 {
@@ -108,14 +111,14 @@ subtest 'document attributes', {
     $doc.baseURI = "localhost/here.xml";
     is $doc.URI, "localhost/here.xml", 'URI is set.';
 
-    if $*DISTRO.is-win {
-        skip 'proper encoding support', 3;
-    }
-    else {
+    if config.have-iconv {
         my $doc2 = LibXML::Document.createDocument(:version<1.1>, :enc<iso-8859-2>);
         is $doc2.encoding, "iso-8859-2", 'doc2 encoding was set.';
         is $doc2.version,  "1.1", 'doc2 version was set.';
         is $doc2.standalone,  -1, 'doc2 standalone';
+    }
+    else {
+        skip 'this libxml library was built without iconv encoding support', 3;
     }
 }
 
@@ -563,7 +566,7 @@ subtest 'compress' => {
     my LibXML::Document:D $doc .= parse: :file( "samples/test.xml" );
     todo '$doc.input-compressed is unreliable in libxml <= v2.09.01'
         if LibXML.version <= v2.09.01;
-    todo "unreliable on Windows" if $*DISTRO.is-win;
+    todo "this libxml library was built without compression" unless config.have-compression;
     is-deeply $doc.input-compressed , False, 'input-compression of uncompressed document';
     if LibXML.have-compression {
         lives-ok { $doc = LibXML.parse: :file<test/compression/test.xml.gz> }, 'load compressed document';
